@@ -1,3 +1,7 @@
+Sat Apr  4 18:28:24 CEST 2015
+	Fix potential deadlock issue in MHD_USE_THREAD_PER_CONNECTION
+	mode if shutdown is initiated while connections are active. -CG
+
 Sat Apr  4 17:48:13 CEST 2015
 	Fix issue in thread-pool mode where a MHD_stop_daemon()
 	might not reach threads that stopped listening because
